--- a/src/Info.plist
+++ b/src/Info.plist
@@ -2658,9 +2658,9 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>12.5nightly</string>
+	<string>12.5</string>
 	<key>CFBundleShortVersionString</key>
-	<string>12.5 nightly</string>
+	<string>12.5</string>
 	<key>NSHighResolutionCapable</key>
 	<true/>
 </dict>
