Updated Brazilian Portuguese translation.
Thanks to Georger Araújo.

--- a/core/locales/locale.pt_BR.conf
+++ b/core/locales/locale.pt_BR.conf
@@ -32,7 +32,7 @@ Clear List = _Limpar Lista
 # The column label for lists of filenames in dialogs.
 Filename = Nome do arquivo
 # The text displayed in a dialog when more than X files were found in the quick open dialog.
-files or more were found. Showing the first = arquivos ou mais foram encontrados. Mostrando o primeiro
+files or more were found. Showing the first = ou mais arquivos foram encontrados. Mostrando o primeiro
 File Limit Exceeded = Limite de Arquivos Excedido
 OK = _OK
 
@@ -169,7 +169,7 @@ Duplicate Line/Selection = _Duplicar Linha/Seleção
 Delete = _Excluir
 Delete Word = Excluir _Palavra
 Select All = Selecion_ar Tudo
-Deselect = Deselect
+Deselect = Desseleci_onar
 Match Brace = Coincidir Cha_ve
 Complete Word = Co_mpletar Palavra
 Toggle Block Comment = Chavear Comentário em _Bloco
