Disable reproc's install rules.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ fetch(regex https://github.com/orbitalquark/lua-std-regex/archive/1.0.zip)
 fetch(cdk https://github.com/ThomasDickey/cdk-snapshots/archive/refs/tags/t20240619.tar.gz)
 fetch(termkey https://www.leonerd.org.uk/code/libtermkey/libtermkey-0.22.tar.gz)
 fetch(reproc https://github.com/DaanDeMeyer/reproc/archive/refs/tags/v14.2.5.zip)
-FetchContent_MakeAvailable(scintilla scinterm scintillua lua lpeg lfs regex cdk termkey reproc)
+FetchContent_MakeAvailable(scintilla scinterm scintillua lua lpeg lfs regex cdk termkey)
 if(WIN32)
 	fetch(pdcurses https://prdownloads.sourceforge.net/pdcurses/PDCurses-3.9.zip)
 	fetch(iconv https://ftp.gnu.org/pub/gnu/libiconv/libiconv-1.17.tar.gz)
@@ -106,6 +106,10 @@ if(QT)
 	set(QAPPLICATION_CLASS QApplication CACHE STRING "Inheritance class for SingleApplication")
 	set(QT_DEFAULT_MAJOR_VERSION ${QT_VERSION_MAJOR})
 	FetchContent_MakeAvailable(singleapp)
+endif()
+if(CURSES)
+	set(REPROC_INSTALL OFF)
+	FetchContent_MakeAvailable(reproc)
 endif()
 set(FETCHCONTENT_UPDATES_DISCONNECTED ON CACHE BOOL "Do not update deps if already set up")
 
